force-app/main/default/objects/Medicallab__c/Medicallab__c.object-meta.xml
<CustomObject>
    <label>Medicallab</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Medicallab Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medicallab</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>