force-app/main/default/objects/Medicallab__c/fields/Lab_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lab_Amount__c</fullName>
    <label>Lab Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>