force-app/main/default/objects/Medicallab__c/fields/Lab_name__c.field-meta.xml
<CustomField>
    <fullName>Lab_name__c</fullName>
    <label>Lab name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>