force-app/main/default/objects/Medicallab__c/fields/Lab_set_up_date__c.field-meta.xml
<CustomField>
    <fullName>Lab_set_up_date__c</fullName>
    <label>Lab set up date</label>
    <type>Date</type>
</CustomField>