force-app/main/default/objects/Medicallab__c/fields/Technician_contact__c.field-meta.xml
<CustomField>
    <fullName>Technician_contact__c</fullName>
    <label>Technician contact</label>
    <type>Email</type>
</CustomField>